# conduit-oidc

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
src/: auth.rs  client_server.rs  error.rs  events.rs  federation.rs  lib.rs  main.rs  room.rs  state.rs
src/conduit/: mod.rs
